Fixed jumping send form on msg select

--- a/app/less/desktop.less
+++ b/app/less/desktop.less
@@ -1297,26 +1297,37 @@ a.im_panel_peer_photo .peer_initials {
 
 .im_record {
   display: none;
-  width: 50px;
-  height: 50px;
-  margin: -10px 0 0 -18px; 
+  width: 18px;
+  height: 23px;
+  margin-right: 15px;
+  
   user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  
+  position: relative;
+
+  .im_record_supported & {
+    display: block;
+  }
+}
+.im_record_bg {
+  position: absolute;
+  margin: -10px 0 0 -16px; 
   padding: 13px 16px 13px 16px;
+
+  width: 50px;
+  height: 50px;
 
   border-radius: 50px;
   overflow: hidden;
   background: #fff;
   transition: background-color linear 0.2s;
 
-  .im_record_supported & {
-    display: block;
+  .im_send_form_hover .im_voice_recording & {
+    background: #cae9ff;
   }
-}
-.im_send_form_hover .im_voice_recording .im_record {
-  background: #cae9ff;
 }
 
 .icon-mic {
@@ -1494,7 +1505,7 @@ a.im_panel_peer_photo .peer_initials {
   .im_record {
     display: none;
     position: absolute;
-    top: -4px;
+    top: 5px;
     right: -56px;
     margin-top: -8px;
 
